<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/spinner"
            app:layout_constraintEnd_toStartOf="@+id/spinner"
            app:layout_constraintHorizontal_bias="0.742"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinner"
            app:srcCompat="@drawable/ic_baseline_outlined_flag_24" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="268dp"
            android:layout_height="21dp"
            android:text="@string/language"
            app:layout_constraintBottom_toTopOf="@+id/spinner"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.925" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="281dp"
            android:layout_height="44dp"
            android:background="?colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.723"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.205" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="259dp"
            android:layout_height="44dp"
            android:backgroundTint="?colorSecondary"
            android:text="@string/log_out"
            app:icon="@drawable/ic_baseline_run_circle_24"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="?colorSecondaryVariant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintVertical_bias="0.683" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/buttonDM"
            app:layout_constraintEnd_toStartOf="@+id/buttonDM"
            app:layout_constraintHorizontal_bias="0.742"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonDM"
            app:srcCompat="@drawable/ic_baseline_brush_24" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/darkmode"
            app:layout_constraintBottom_toTopOf="@+id/buttonDM"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/buttonDM"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.965" />

        <Button
            android:id="@+id/buttonDM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.291"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintVertical_bias="0.206" />

        <Button
            android:id="@+id/buttonDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            app:layout_constraintBottom_toBottomOf="@+id/buttonDM"
            app:layout_constraintStart_toEndOf="@+id/buttonDM"
            app:layout_constraintTop_toTopOf="@+id/buttonDM" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="?colorPrimaryVariant"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>