<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.106" />

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Joremy"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textViewGreeting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toEndOf="@+id/textViewGreeting"
            app:layout_constraintTop_toTopOf="@+id/textViewGreeting"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..."
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textViewUserName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textViewUserName"
            app:layout_constraintTop_toTopOf="@+id/textViewUserName"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.cardview.widget.CardView
            android:layout_width="374dp"
            android:layout_height="125dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewInfValMain1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewInfMain1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.311"
                    app:layout_constraintStart_toEndOf="@+id/textViewInfMain1"
                    app:layout_constraintTop_toTopOf="@+id/textViewInfMain1"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/textViewAreaMain1"
                    android:layout_width="210dp"
                    android:layout_height="27dp"
                    android:layout_marginEnd="87dp"
                    android:text="Area"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.119" />

                <TextView
                    android:id="@+id/textViewVacMain1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vaccinations"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textViewInfMain1"
                    app:layout_constraintTop_toBottomOf="@+id/textViewInfMain1"
                    app:layout_constraintVertical_bias="0.155" />

                <TextView
                    android:id="@+id/textViewInfMain1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/infections"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textViewAreaMain1"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textViewAreaMain1"
                    app:layout_constraintTop_toBottomOf="@+id/textViewAreaMain1"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textViewVacValMain1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewVacMain1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.238"
                    app:layout_constraintStart_toEndOf="@+id/textViewVacMain1"
                    app:layout_constraintTop_toTopOf="@+id/textViewVacMain1"
                    app:layout_constraintVertical_bias="1.0" />

                <CheckBox
                    android:id="@+id/checkBoxMain1"
                    android:layout_width="31dp"
                    android:layout_height="27dp"
                    android:button="@drawable/checkbox_selector"
                    app:buttonTint="@color/grey"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewAreaMain1"
                    app:layout_constraintEnd_toStartOf="@+id/textViewAreaMain1"
                    app:layout_constraintHorizontal_bias="0.761"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textViewAreaMain1" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/grey"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>